GoalTracker/force-app/main/default/objects/Goal_Tracker__c/Goal_Tracker__c.object-meta.xml
<CustomObject>
    <description>Tracks Prospect Manager Goals and Attainment</description>
    <label>Goal Tracker</label>
    <nameField>
        <displayFormat>GT-{00000}</displayFormat>
        <label>Goal Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Trackers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>