GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Accepted_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Opportunities__c</fullName>
    <label>Accepted Opps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>