GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Accepted_Opps_Report__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Opps_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://cmu.lightning.force.com/lightning/r/Report/00Of4000007GXQOEA4/view?fv0=&apos;+ Prospect_Manager__r.ID_18_Digit__c
+ &apos;&amp;fv1=&apos;  +  Fiscal_Year__c

,&apos;View Accepted Opps Report for this Fiscal Year&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Opps Report</label>
    <type>Text</type>
</CustomField>