GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Accepted_Progress_Against_Goal__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Progress_Against_Goal__c</fullName>
    <formula>Accepted_Count__c /  Accepted_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Progress Against Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>