GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Accepted_Revenue_Report_PM__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Revenue_Report_PM__c</fullName>
    <formula>HYPERLINK(&apos;https://cmu--uat.lightning.force.com/lightning/r/Report/00O0U000000SyPCUA0/view?fv0=&apos;+ Prospect_Manager__r.ID_18_Digit__c 
+ &apos;&amp;fv1=&apos;  +  Fiscal_Year__c

,&apos;View PM Accepted Revenue Report for this Fiscal Year&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Revenue Report (PM)</label>
    <type>Text</type>
</CustomField>