GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <formula>Prospect_Manager__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User</label>
    <type>Checkbox</type>
</CustomField>