GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Central_vs_School__c.field-meta.xml
<CustomField>
    <fullName>Central_vs_School__c</fullName>
    <formula>TEXT(Prospect_Manager__r.Central_Vs_School__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Central vs School</label>
    <type>Text</type>
</CustomField>