GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Close_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Close_Percentage__c</fullName>
    <formula>Accepted_Count__c /  Submitted_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>