GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Commits_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Commits_Team_Leader__c</fullName>
    <description>Commits for this Fiscal Year as Team Leader.  Includes Accepted Opportunities and Non-Opportunity Solicitation Credits.</description>
    <formula>Solicitation_Credits_Total_Team_Leader__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commits for this Fiscal Year as Team Leader.  Includes Accepted Opportunities and Non-Opportunity Solicitation Credits.</inlineHelpText>
    <label>Commits (Team Leader)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>