GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Commits_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Commits_Team_Member__c</fullName>
    <description>Commits to Date for this Fiscal as Team Member</description>
    <formula>Solicitation_Credits_Total_Team_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commits to Date for this Fiscal as Team Member</inlineHelpText>
    <label>Commits (Team Member)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>