GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>DATE(  (VALUE(Fiscal_Year__c)-1)   , 7 , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>