GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Enter the fiscal year for this user&apos;s goals</description>
    <inlineHelpText>Enter the fiscal year for this user&apos;s goals</inlineHelpText>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>