GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Last_Goals_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Goals_Update__c</fullName>
    <description>Date and Time of the last update on this goals record</description>
    <inlineHelpText>Date and Time of the last update on this goals record</inlineHelpText>
    <label>Last Goals Update</label>
    <type>DateTime</type>
</CustomField>