GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>IF(NOT(ISBLANK(Prospect_Manager__r.ManagerId)), Prospect_Manager__r.Manager.Reporting_Name__c,  &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>