GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/PM_Group__c.field-meta.xml
<CustomField>
    <fullName>PM_Group__c</fullName>
    <formula>TEXT(Prospect_Manager__r.PM_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Group</label>
    <type>Text</type>
</CustomField>