GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/PM_Team__c.field-meta.xml
<CustomField>
    <fullName>PM_Team__c</fullName>
    <formula>TEXT(Prospect_Manager__r.PM_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Team</label>
    <type>Text</type>
</CustomField>