GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/PMContactId__c.field-meta.xml
<CustomField>
    <fullName>PMContactId__c</fullName>
    <formula>IF( !ISBLANK(Prospect_Manager__r.PM_Contact_Id__c), Prospect_Manager__r.PM_Contact_Id__c , &quot;EMPTY&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMContactId</label>
    <type>Text</type>
</CustomField>