GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Prospect_Manager__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Manager</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>IP Prospect Manager, Planned Giving Prospect Manager, UA Prospect Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Goal_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>