GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Qualifications_Progress_Against_Goal__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_Progress_Against_Goal__c</fullName>
    <formula>Qualifications_Count__c  /  Qualifications_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualifications Progress Against Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>