GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Qualifications_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_Report_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://cmu.lightning.force.com/lightning/r/Report/00Of4000007GXQPEA4/view?fv0=&apos;  
+   Prospect_Manager__r.ID_18_Digit__c + &apos;&amp;fv1=&apos; + Fiscal_Year__c 

,&apos;View Qualifications Report for this Fiscal Year&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualifications Report</label>
    <type>Text</type>
</CustomField>