GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Revenue_Goal_Non_PM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Goal_Non_PM__c</fullName>
    <description>Revenue Goal as a member of the Opportunity Team</description>
    <inlineHelpText>Revenue Goal as a member of the Opportunity Team</inlineHelpText>
    <label>Revenue Goal (Non-PM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>