GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Revenue_Goal_PM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Goal_PM__c</fullName>
    <description>Revenue Goal as Team Leader</description>
    <inlineHelpText>Revenue Goal as Team Leader</inlineHelpText>
    <label>Commits Goal (Team Leader)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>