GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Revenue_Progress_Against_Goal_Non_PM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Progress_Against_Goal_Non_PM__c</fullName>
    <formula>Revenue_To_Date_Non_PM__c /  Revenue_Goal_Non_PM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Progress Against Goal (Non-PM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>