GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Revenue_Progress_Against_Goal_PM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Progress_Against_Goal_PM__c</fullName>
    <description>Percentage of Commits Goal achieved to date for this Fiscal Year</description>
    <formula>Commits_Team_Leader__c /  Revenue_Goal_PM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Commits Goal achieved to date for this Fiscal Year</inlineHelpText>
    <label>Commits Against Goal (Team Leader)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>