GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Revenue_To_Date_Non_PM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_To_Date_Non_PM__c</fullName>
    <description>Commits as a member of the Opportunity Team</description>
    <inlineHelpText>Commits as a member of the Opportunity Team</inlineHelpText>
    <label>Revenue To Date (Non-PM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>