GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Revenue_To_Date_PM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_To_Date_PM__c</fullName>
    <description>Revenue from all Accepted Opportunities where the Prospect Manager is the Team Leader</description>
    <inlineHelpText>Revenue from all Accepted Opportunities where the Prospect Manager is the Team Leader</inlineHelpText>
    <label>Accepted Opp Revenue To Date (PM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>