GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Solicitation_Credit_Report_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Credit_Report_Team_Leader__c</fullName>
    <formula>HYPERLINK(&apos;https://cmu.lightning.force.com/lightning/r/Report/00O2S000003OS6jUAG/view?fv0=&apos;+ Prospect_Manager__r.ID_18_Digit__c
+&apos;&amp;fv1=&apos;+ PMContactId__c  +&apos;&amp;fv2=&apos;+ Fiscal_Year__c

, &apos;View Team Leader Solicitation Credits Report for this Fiscal Year&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitation Credit Report (Team Leader)</label>
    <type>Text</type>
</CustomField>