GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Solicitation_Credits_Count_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Credits_Count_Team_Leader__c</fullName>
    <label>Solicitation Credits Count (Team Leader)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>