GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Solicitation_Credits_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Credits_Team_Member__c</fullName>
    <label>Solicitation Credits (Team Member)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>