GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Solicitation_Credits_Total_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Credits_Total_Team_Leader__c</fullName>
    <label>Solicitation Credits Total (Team Leader)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>