GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Submitted_Goal__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Goal__c</fullName>
    <label>Submitted Goal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>