GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Submitted_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Opportunities__c</fullName>
    <label>Submitted Opps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>