GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Submitted_Progress_Against_Goal__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Progress_Against_Goal__c</fullName>
    <formula>Submitted_Count__c /  Submitted_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted Progress Against Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>