GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Submitted_Total_Asks__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Total_Asks__c</fullName>
    <label>Submitted Total Asks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>