GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Visits__c.field-meta.xml
<CustomField>
    <fullName>Visits__c</fullName>
    <label>Visits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>