GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Visits_Count__c.field-meta.xml
<CustomField>
    <fullName>Visits_Count__c</fullName>
    <label>Visits Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>