GoalTracker/force-app/main/default/objects/Goal_Tracker__c/fields/Visits_Progress_Against_Goal__c.field-meta.xml
<CustomField>
    <fullName>Visits_Progress_Against_Goal__c</fullName>
    <formula>Visits_Count__c /  Visits_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visits Progress Against Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>