GoalTracker/force-app/main/default/objects/Goal_Tracker__c/listViews/Current_Fiscal_Year.listView-meta.xml
<ListView>
    <fullName>Current_Fiscal_Year</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Manager__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>PM_Group__c</columns>
    <columns>PM_Team__c</columns>
    <columns>Visits_Count__c</columns>
    <columns>Qualifications_Count__c</columns>
    <columns>Accepted_Count__c</columns>
    <columns>Submitted_Count__c</columns>
    <columns>Commits_Team_Member__c</columns>
    <columns>Revenue_Goal_PM__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <label>Current Fiscal Year</label>
    <sharedTo>
        <role>Prospect_Management_Team</role>
        <role>Research_Prospect_Management_Leader</role>
    </sharedTo>
</ListView>